# diploma-ml-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/: main.py
src/api/exceptions/: exception_handlers.py
src/api/middlewares/: response_middleware.py
src/api/v1/controllers/: detection.py
src/api/v1/schemas/: detection.py  user.py
src/core/: config.py  logging.py  security.py
src/dtos/: __init__.py  detection_dto.py  user_dto.py
src/ioc/: __init__.py  repository_provider.py  service_provider.py
src/models/rubert-base-ainl-peft/checkpoint-3072/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
src/models/rubert-base-ainl-peft/checkpoint-4945/: adapter_config.json  rng_state.pth  scheduler.pt  tokenizer.json  trainer_state.json
src/models/rubert-base-ainl-peft/checkpoint-6000/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
src/models/rubert-base-ainl-peft/checkpoint-7000/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
src/models/rubert-base-ainl-peft/checkpoint-9400/: README.md  adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
src/services/: detection_service.py
src/utils/: chunk_aggregator.py  text_chunker.py
